--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Wayne Jones # CHANGE THIS TO YOUR NAME
+name: dominique stevenson # CHANGE THIS TO YOUR NAME
 
 # Short bio or description (displayed in the header)
-description: Teacher of Computer Science # CHANGE THIS FOR YOUR BLOG
+description: my blog # CHANGE THIS FOR YOUR BLOG
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /jekyll-logo.png
